--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ allow="autoplay">
   <p>Best decision ever 🥺</p>
 
   <div class="image-box">
-    <img src="IMG_6478.jpeg" alt="cute couple hug">
+    <img src="./IMG_6478.jpeg" alt="cute couple hug">
   </div>
 
   <p>I love you ❤️</p>
